feat(book): lending a boot to authenticated user
